--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -295,6 +295,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Els fitxers multimèdia d\'una sola visualització se suprimeixen automàticament un cop enviats.</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Ja heu vist aquest missatge.</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Podeu afegir notes per a vosaltres mateixos en aquesta conversa.\nSi el compte té dispositius enllaçats, s\'hi sincronitzaran les notes noves.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d membres del grup tenen el mateix nom.</string>
+  <string name="ConversationFragment__tap_to_review">Feu un toc per revisar-ho</string>
+  <string name="ConversationFragment__review_requests_carefully">Reviseu les sol·licituds amb atenció.</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">El Signal ha trobat un altre contacte amb el mateix nom.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">No hi ha cap navegador instal·lat al dispositiu.</string>
   <!--ConversationListFragment-->
@@ -454,6 +458,17 @@
   <string name="GroupManagement_learn_more">Més informació</string>
   <string name="GroupManagement_invite_multiple_users">No podeu afegir aquests usuaris automàticament a aquest grup.\n\nHan estat convidats a afegir-s\'hi i no veuran cap missatge del grup fins que ho acceptin.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Què són els grups nous?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Els grups nous tenen funcions com ara @mencions i administradors de grups, i admetran més funcions en el futur.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">S\'han conservat tot l\'historial de missatges i el contingut anteriors a l\'actualització.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Aquest membre haurà d\'acceptar una invitació per tornar a afegir-se a aquest grup i no en rebrà missatges fins que no l\'accepti:</item>
+    <item quantity="other">Aquests membres hauran d\'acceptar una invitació per tornar a afegir-se a aquest grup i no en rebran missatges fins que no l\'acceptin:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Aquest membre no pot afegir-se als grups nous i s\'ha suprimit del grup:</item>
+    <item quantity="other">Aquests membres no poden afegir-se als grups nous i s\'han suprimit del grup:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Voleu abandonar el grup?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Ja no podreu enviar o rebre missatges d\'aquest grup.</string>
@@ -807,6 +822,8 @@
   <string name="MessageRecord_you_updated_group">Heu actualitzat el grup.</string>
   <string name="MessageRecord_the_group_was_updated">S\'ha actualitzat el grup.</string>
   <string name="MessageRecord_you_called_date">Heu trucat · %1$s</string>
+  <string name="MessageRecord_missed_audio_call_date">Trucada d\'àudio perduda · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Trucada de vídeo perduda · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s ha actualitzat el grup.</string>
   <string name="MessageRecord_s_called_you_date">%1$s us ha trucat · %2$s</string>
   <string name="MessageRecord_called_s">Heu trucat a %s</string>
@@ -816,6 +833,11 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Heu establert el temporitzador dels missatges efímers a %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s ha establert el temporitzador dels missatges efímers a %2$s.</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">S\'ha establert el temporitzador dels missatges efímers a %1$s.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">Aquest grup s\'ha actualitzat a un grup nou.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s membre no s\'ha pogut afegir al grup nou i s\'ha convidat a afegir-s\'hi.</item>
+    <item quantity="other">%1$s membres no s\'han pogut afegir al grup nou i s\'han convidat a afegir-s\'hi.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s ha canviat el nom del perfil a %2$s.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s ha canviat el nom del perfil de %2$s a %3$s.</string>
@@ -1323,6 +1345,7 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Aquest missatge se suprimirà permanentment.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s a %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">El contingut ja no està disponible.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">No es pot trobar cap aplicació que pugui compartir aquest contingut.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d missatges nous a %2$d converses</string>
   <string name="MessageNotifier_most_recent_from_s">Més recent de %1$s</string>
@@ -2342,11 +2365,31 @@ S\'ha rebut un missatge d\'intercanvi de claus per a una versió del protocol no
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">Reviseu els mebres</string>
+  <string name="ReviewCardDialogFragment__review_request">Reviseu la sol·licitud</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d membres del grup tenen el mateix nom. Reviseu els membres que es mostren a continuació.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">Si no esteu segur de qui prové la sol·licitud, reviseu els contactes que hi ha a continuació.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">Cap altre grup en comú</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">Cap grup en comú</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d grup en comú</item>
+    <item quantity="other">%d grups en comú</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d grup en comú</item>
+    <item quantity="other">%d grups en comú</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">Voleu suprimir %1$s del grup?</string>
   <string name="ReviewCardDialogFragment__remove">Suprimeix</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Ha fallat suprimir el membre del grup.</string>
   <!--ReviewCard-->
   <string name="ReviewCard__member">Membre</string>
+  <string name="ReviewCard__request">Sol·licitud</string>
+  <string name="ReviewCard__your_contact">Contacte</string>
   <string name="ReviewCard__remove_from_group">Suprimeix del grup</string>
+  <string name="ReviewCard__update_contact">Actualitza el contacte</string>
   <string name="ReviewCard__block">Bloca</string>
   <string name="ReviewCard__delete">Suprimeix</string>
+  <string name="ReviewCard__recently_changed">Recentment han canviat el nom del perfil de %1$s a %2$s.</string>
   <!--EOF-->
 </resources>
