--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -305,6 +305,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Odlazni medijski zapisi koji su vidljivi samo jednom se automatski uklanjaju nakon što su poslani</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Već ste pregledali ovu poruku</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">U ovom razgovoru možete dodati osobne bilješke.\nAko vaš račun ima povezane uređaje, nove će se bilješke sinkronizirati.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d člana/ova grupe imaju isto ime.</string>
+  <string name="ConversationFragment__tap_to_review">Pritisnite za pregled</string>
+  <string name="ConversationFragment__review_requests_carefully">Pažljivo pregledajte zahtjeve</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">Signal je pronašao drugi kontakt s istim imenom.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Na vašem uređaju nije instaliran preglednik.</string>
   <!--ConversationListFragment-->
@@ -470,6 +474,19 @@
   <string name="GroupManagement_learn_more">Saznaj više</string>
   <string name="GroupManagement_invite_multiple_users">Ne možete automatski dodati ove korisnike u grupu.\n\nKorisnik je pozvan u grupu i neće vidjeti poruke grupe dok ne prihvati pozivnicu.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Što su Nove grupe?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Nove grupe imaju značajke poput @spominjanja i administratora grupa, a ubuduće će podržavati više značajki.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Sva povijest poruka i medijskih zapisa sačuvani su od prije nadogradnje.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Ovaj član morat će prihvatiti pozivnicu da se ponovno pridruži ovoj grupi i neće primati poruke grupe dok ne prihvati:</item>
+    <item quantity="few">Ovi članovi morat će prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
+    <item quantity="other">Ovi članovi morat će prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Ovaj član nije u mogućnosti pridružiti se Novim grupama i uklonjen je iz grupe:</item>
+    <item quantity="few">Ovi članovi nisu u mogućnosti pridružiti se Novim grupama i uklonjeni su iz grupe:</item>
+    <item quantity="other">Ovi članovi nisu u mogućnosti pridružiti se Novim grupama i uklonjeni su iz grupe:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Napusti grupu?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nećete više biti u mogućnosti slati i primati poruke u ovoj grupi.</string>
@@ -842,6 +859,8 @@
   <string name="MessageRecord_you_updated_group">Ažurirali ste grupu.</string>
   <string name="MessageRecord_the_group_was_updated">Grupa je ažurirana.</string>
   <string name="MessageRecord_you_called_date">Vi ste zvali · %1$s</string>
+  <string name="MessageRecord_missed_audio_call_date">Propušteni zvučni poziv · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Propušteni video poziv · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s je ažurirao grupu.</string>
   <string name="MessageRecord_s_called_you_date">%1$s vas je zvao/la · %2$s</string>
   <string name="MessageRecord_called_s">Nazvali ste %s</string>
@@ -851,6 +870,12 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Postavili ste da poruke nestaju za %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s je postavio/la da poruke nestaju za %2$s.</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">Postavljeno je da poruke nestaju za %1$s.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">Ova grupa je ažurirana u Novu grupu.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s član nije moguće dodati u Novu grupu i pozvan je da se pridruži.</item>
+    <item quantity="few">%1$s člana nije moguće dodati u Novu grupu i pozvani su da se pridruži.</item>
+    <item quantity="other">%1$s članova nije moguće dodati u Novu grupu i pozvani su da se pridruži.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s je promijenio/la svoje ime na profilu u %2$s.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s je promijenio/la svoje ime na profilu iz %2$s u %3$s.</string>
@@ -1373,6 +1398,7 @@ broj telefona</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Ovo će trajno izbrisati ovu poruka.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s za %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">Medijski zapis više nije dostupan.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">Nije moguće pronaći aplikaciju za dijeljenje ovog medijskog zapisa.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d novih poruka u %2$d razgovora</string>
   <string name="MessageNotifier_most_recent_from_s">Najnovije od: %1$s</string>
@@ -2411,11 +2437,33 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">Pregled članova</string>
+  <string name="ReviewCardDialogFragment__review_request">Pregled zahtjeva</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d člana/ova grupe imaju isto ime, pregledajte članove u nastavku i odaberite poduzeti radnju.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">Ako niste sigurni od koga je zahtjev, pregledajte kontakte u nastavku i poduzmite radnje.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">Nema drugih zajedničkih grupa.</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">Nema zajedničkih grupa.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d zajednička grupa</item>
+    <item quantity="few">%d zajedničke grupe</item>
+    <item quantity="other">%d zajedničkih grupa</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d zajednička grupa</item>
+    <item quantity="few">%d zajedničke grupe</item>
+    <item quantity="other">%d zajedničkih grupa</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">Ukloniti %1$s iz grupe?</string>
   <string name="ReviewCardDialogFragment__remove">Ukloni</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Uklanjanje člana grupe nije uspjelo.</string>
   <!--ReviewCard-->
   <string name="ReviewCard__member">Član</string>
+  <string name="ReviewCard__request">Zahtjev</string>
+  <string name="ReviewCard__your_contact">Vaši kontakti</string>
   <string name="ReviewCard__remove_from_group">Ukloni iz grupe</string>
+  <string name="ReviewCard__update_contact">Ažuriraj kontakt</string>
   <string name="ReviewCard__block">Blokiraj</string>
   <string name="ReviewCard__delete">Izbriši</string>
+  <string name="ReviewCard__recently_changed">Nedavno su promijenili ime svog profila iz %1$s u %2$s</string>
   <!--EOF-->
 </resources>
