--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -296,6 +296,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">A kimenő egyszer megjelenő médiafájlokat automatikusan töröljük feladásukat követően</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Ezt az üzenetet egyszer már megtekintetted</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Ehhez a beszélgetéshez privát jegyzeteket fűzhetsz.\nHa társítottál más eszközöket is fiókodhoz, akkor az új jegyzetek a szinkronizálás révén ott is elérhetőek lesznek.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">A csoport %1$d tagjának megegyezik a neve.</string>
+  <string name="ConversationFragment__tap_to_review">Koppints az áttekintéshez</string>
+  <string name="ConversationFragment__review_requests_carefully">Gondosan nézd át a kéréseket</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">A Signal talált egy másik, azonos nevű kontaktot.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Nincs böngésző telepítve a készülékedre.</string>
   <!--ConversationListFragment-->
@@ -455,6 +459,17 @@
   <string name="GroupManagement_learn_more">További információ</string>
   <string name="GroupManagement_invite_multiple_users">Ezeket a felhasználókat nem lehet automatikusan a csoporthoz adni.\n\nBár már meg lettek hívva, addig mégsem láthatják a csoportüzeneteket, míg el nem fogadják a meghívást.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Mik azok az új típusú csoportok?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Az új típusú csoportok olyan képességekkel rendelkeznek, mint példáui @említések, csoportadminok, és a jövőben újabb képességes hozzáadása várható.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Megtartottuk a frissítés előtti üzenet-előzményeket és médiafájlokat.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Ezt a tagot újra meg meg kell hívni, és kell fogadnia a meghívót, mielőtt újra üzenetet tudna fogadni a csoporttól:</item>
+    <item quantity="other">Ezeket a tagokat újra meg meg kell hívni, és kell fogadniuk a meghívót, mielőtt újra üzenetet tudnak fogadni a csoporttól:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Ez a csoporttag nem tud az új típusú csoportba belépni, ezért eltávolításra került a tagok közül:</item>
+    <item quantity="other">Ezek a csoporttagok nem tudnak az új típusú csoportba belépni, ezért eltávolításra kerültek a tagok közül:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Kilépsz a csoportból?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Többé nem tudsz küldeni vagy fogadni üzeneteket és hívásokat ebben a csoportban.</string>
@@ -808,6 +823,8 @@
   <string name="MessageRecord_you_updated_group">Frissítetted a csoportot.</string>
   <string name="MessageRecord_the_group_was_updated">A csoport frissítve lett.</string>
   <string name="MessageRecord_you_called_date">Te hívtad · %1$s</string>
+  <string name="MessageRecord_missed_audio_call_date">Nem fogadott hanghívás · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Nem fogadott videóhívás · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s frissítette a csoportot.</string>
   <string name="MessageRecord_s_called_you_date">%1$s hívott téged · %2$s</string>
   <string name="MessageRecord_called_s">Kimenő hívás: %s</string>
@@ -817,6 +834,11 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Beállítottad, hogy az üzenetek ennyi idő után tűnjenek el: %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s beállította, hogy az üzenetek ennyi idő után tűnjenek el: %2$s.</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">Az eltűnő üzenetek új beállítása: %1$s</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">Ez a csoport új típusú csoporttá lett alakítva.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s db tagot nem lehetett közvetlenül az új típusú csoporthoz adni, ezért meg lett hívva.</item>
+    <item quantity="other">%1$s db tagot nem lehetett közvetlenül az új típusú csoporthoz adni, ezért meg lettek hívva.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s megváltoztatta profilnevét erre: %2$s</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s megváltoztatta profilnevét. Korábbi név: %2$s, új név: %3$s</string>
@@ -1331,6 +1353,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Ez véglegesen törölni fogja ezt az üzenetet.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s (címzett: %2$s)</string>
   <string name="MediaPreviewActivity_media_no_longer_available">A médiafájl már nem érhető el</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">Nem található alkalmazás ezen médiafájl megnyitásához.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d új üzenet %2$d beszélgetésben</string>
   <string name="MessageNotifier_most_recent_from_s">Legutóbb tőle: %1$s</string>
@@ -2351,11 +2374,31 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">Tagok áttekintése</string>
+  <string name="ReviewCardDialogFragment__review_request">Kérések áttekintése</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d csoporttagnak ugyanaz a neve. Tekintsd át a listájukat, és dönts a továbbiakról!</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">Ha nem vagy benne biztos, hogy kitől is érkezett a kérés, akkor tekintsd át az alábbi kontaktokat döntés előtt!</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">Nincs egyéb közös csoportotok.</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">Nincs közös csoportotok.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d db közös csoport</item>
+    <item quantity="other">%d db közös csoport</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d db közös csoport</item>
+    <item quantity="other">%d db közös csoport</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">Eltávolítod %1$s-t a csoportból?</string>
   <string name="ReviewCardDialogFragment__remove">Eltávolítás</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Nem sikerült eltávolítani a csoporttagot.</string>
   <!--ReviewCard-->
   <string name="ReviewCard__member">Tag</string>
+  <string name="ReviewCard__request">Kérés</string>
+  <string name="ReviewCard__your_contact">Saját profil</string>
   <string name="ReviewCard__remove_from_group">Eltávolítás a csoportból</string>
+  <string name="ReviewCard__update_contact">Profil frissítése</string>
   <string name="ReviewCard__block">Letiltás</string>
   <string name="ReviewCard__delete">Törlés</string>
+  <string name="ReviewCard__recently_changed">Nemrég megváltoztatta profilnevét erről: %1$s erre: %2$s</string>
   <!--EOF-->
 </resources>
