--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -822,7 +822,7 @@
   <string name="MessageRecord_you_updated_group">Você atualizou o grupo.</string>
   <string name="MessageRecord_the_group_was_updated">O grupo foi atualizado.</string>
   <string name="MessageRecord_you_called_date">Você ligou · %1$s</string>
-  <string name="MessageRecord_missed_audio_call_date">Chamada de áudio perdida · %1$s</string>
+  <string name="MessageRecord_missed_audio_call_date">Chamada de voz perdida · %1$s</string>
   <string name="MessageRecord_missed_video_call_date">Chamada de vídeo perdida · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s atualizou o grupo.</string>
   <string name="MessageRecord_s_called_you_date">%1$s ligou para você · %2$s</string>
@@ -2396,6 +2396,6 @@
   <string name="ReviewCard__update_contact">Atualizar o contato</string>
   <string name="ReviewCard__block">Bloquear</string>
   <string name="ReviewCard__delete">Excluir</string>
-  <string name="ReviewCard__recently_changed">Mudou recentemente o nome do seu perfil de %1$s a %2$s</string>
+  <string name="ReviewCard__recently_changed">Mudou recentemente o nome de perfil de %1$s para %2$s</string>
   <!--EOF-->
 </resources>
