--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -295,6 +295,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Os ficheiros multimédia de visualização única são removidos automaticamente depois de terem sido enviados</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Já viu esta mensagem</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Pode adicionar notas para si mesmo nesta conversa.\nSe a sua conta estive ligada a algum dispositivo, as notas novas serão sincronizadas.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d membros do grupo têm o mesmo nome.</string>
+  <string name="ConversationFragment__tap_to_review">Toque para rever</string>
+  <string name="ConversationFragment__review_requests_carefully">Revejo os pedidos de forma cuidada</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">O Signal encontrou outro contacto com o mesmo nome.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Não existe nenhum navegador instalado no seu dispositivo.</string>
   <!--ConversationListFragment-->
@@ -454,6 +458,17 @@
   <string name="GroupManagement_learn_more">Saber mais</string>
   <string name="GroupManagement_invite_multiple_users">Estes utilizadores não podem ser adicionados automaticamente a este grupo por si.\n\nEles foram convidados a juntarem-se, mas não irão ver nenhuma mensagem do grupo até que aceite</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">O que são os \'Novos grupos\'?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Novos grupos têm recursos como @menções e administradores de grupos e oferecerão futuramente suporte para mais recursos.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Todo o histórico de mensagem e média foi mantido para antes da atualização. </string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Este membro necessitará de aceitar um convite para se juntar novamente a este grupo e não receberá mensagens do grupo até que eles aceitem:</item>
+    <item quantity="other">Estes membros necessitarão de aceitar um convite para se juntarem novamente a este grupo e não receberão mensagens de grupo até que eles aceitem:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Este membro não é capaz de se juntar a \'Novos grupos\' e foi removido do grupo:</item>
+    <item quantity="other">Estes membros não são capazes de se juntarem a \'Novos grupos\' e foram removidos do grupo:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Abandonar o grupo?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Deixará poder de receber ou enviar mensagens deste grupo.</string>
@@ -807,6 +822,8 @@
   <string name="MessageRecord_you_updated_group">Você atualizou o grupo.</string>
   <string name="MessageRecord_the_group_was_updated">O grupo foi atualizado.</string>
   <string name="MessageRecord_you_called_date">Telefonou · %1$s</string>
+  <string name="MessageRecord_missed_audio_call_date">Chamada de áudio perdida · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Chamada de vídeo perdida · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s atualizou o grupo.</string>
   <string name="MessageRecord_s_called_you_date">%1$s telefonou-lhe · %2$s</string>
   <string name="MessageRecord_called_s">Ligou para %s</string>
@@ -816,6 +833,11 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Você definiu %1$s como o tempo a decorrer até as mensagens serem destruídas.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s definiu %2$s como o tempo a decorrer até as mensagens serem destruídas.</string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">O tempo a decorrer até que as mensagens sejam destruídas foi definido para %1$s.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">O grupo foi atualizado para um \'Novo grupo\'..</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s membro não pode ser adicionado ao \'Novo grupo\' e recebeu convites para se juntar.</item>
+    <item quantity="other">%1$s membros não puderam ser adicionados ao \'Novo grupo\' e receberam convites para se juntarem.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s alterou o seu nome de perfil para %2$s.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s alterou o seu nome de perfil de %2$s para %3$s.</string>
@@ -950,7 +972,7 @@
   <string name="MessageRequestBottomView_unblock">Desbloquear</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">Permite que %1$s lhe enviem mensagens e que seja partilhado o seu nome e fotografia com eles? Eles não saberão que viu a mensagem deles até que aceite.</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">Permite que %1$s lhe enviem mensagens e que seja partilhado o seu nome e fotografia com eles? Eles não irão receber nenhuma mensagem até que os desbloqueie.</string>
-  <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Continuar a sua conversa com este grupo e partilhe o seu nome e fotografia com os seus membros?</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">Continuar a sua conversa com este grupo e partilhar o seu nome e fotografia com os seus membros?</string>
   <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">Continuar a sua conversa com %1$s e partilhar o seu nome e fotografia com eles?</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Juntar-se a este grupo e partilhar o seu nome e fotografia com os seus membros? Eles não sabem que viu as mensagens deles até que aceite.</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">Juntar-se a este grupo? Eles não saberão que viu as mensagens deles até que aceite o convite.</string>
@@ -1325,6 +1347,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Isto irá eliminar permanentemente esta mensagem.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s para %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">Multimédia atualmente indisponível.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">Não foi possível encontrar uma aplicação capaz de partilhar este média.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d novas mensagens em %2$d conversas</string>
   <string name="MessageNotifier_most_recent_from_s">Mais recente de: %1$s</string>
@@ -2344,11 +2367,31 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">Rever membros</string>
+  <string name="ReviewCardDialogFragment__review_request">Rever pedido</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d membros do grupo têm o mesmo nome, reveja os membros abaixo e escolha que ação tomar.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">Se não tiver a certeza de quem é a solicitação, analise os contactos abaixo e tome uma atitude.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">Sem outros grupos em comum</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">Sem grupos em comum.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d grupo em comum</item>
+    <item quantity="other">%d grupos em comum</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d grupo em comum</item>
+    <item quantity="other">%d grupos em comum</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">Remover %1$s deste grupo?</string>
   <string name="ReviewCardDialogFragment__remove">Remover</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Falha ao remover o membro do grupo.</string>
   <!--ReviewCard-->
   <string name="ReviewCard__member">Membro</string>
+  <string name="ReviewCard__request">Pedido</string>
+  <string name="ReviewCard__your_contact">O seu contacto</string>
   <string name="ReviewCard__remove_from_group">Remover do grupo</string>
+  <string name="ReviewCard__update_contact">Atualizar contacto</string>
   <string name="ReviewCard__block">Bloquear</string>
   <string name="ReviewCard__delete">Eliminar</string>
+  <string name="ReviewCard__recently_changed">Alterou recentemente o seu nome de perfil de %1$s para %2$s</string>
   <!--EOF-->
 </resources>
