--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -295,6 +295,10 @@
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Filer för utgående visa-en-gång media tas bort automatiskt efter att de har skickats</string>
   <string name="ConversationFragment_you_already_viewed_this_message">Du har redan sett det här meddelandet</string>
   <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">Du kan lägga till anteckningar för dig själv i den här konversationen.\nOm ditt konto har några länkade enheter synkroniseras nya anteckningar.</string>
+  <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d gruppmedlemmar har samma namn.</string>
+  <string name="ConversationFragment__tap_to_review">Tryck för att granska</string>
+  <string name="ConversationFragment__review_requests_carefully">Granska förfrågningar noggrant</string>
+  <string name="ConversationFragment__signal_found_another_contact_with_the_same_name">Signal hittade en annan kontakt med samma namn.</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Det finns ingen webbläsare installerad på din enhet.</string>
   <!--ConversationListFragment-->
@@ -454,6 +458,17 @@
   <string name="GroupManagement_learn_more">Läs mer</string>
   <string name="GroupManagement_invite_multiple_users">Dessa användare kan inte automatiskt läggas till i denna grupp.\n\nDe har blivit inbjudna att gå med i gruppen och kommer inte att se några gruppmeddelanden förrän de accepterar.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Vad är Nya grupper?</string>
+  <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Nya grupper har funktioner som @omnämnanden och gruppadministratörer och kommer att stöda fler funktioner i framtiden.</string>
+  <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">All meddelandeshistorik och media har sparats från före uppgraderingen.</string>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_will_need_to_accept_an_invite">
+    <item quantity="one">Denna medlem måste acceptera en inbjudan att gå med i gruppen igen och kommer inte att få gruppmeddelanden förrän de accepterar:</item>
+    <item quantity="other">Dessa medlemmar måste acceptera en inbjudan att gå med i gruppen igen och kommer inte att få gruppmeddelanden förrän de accepterar:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+    <item quantity="one">Denna medlem kan inte gå med i nya grupper och har tagits bort från gruppen:</item>
+    <item quantity="other">Dessa medlemmar kan inte gå med i Nya grupper och har tagits bort från gruppen:</item>
+  </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Lämna grupp?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Du kommer inte längre att kunna skicka eller ta emot meddelanden i denna grupp.</string>
@@ -807,6 +822,8 @@
   <string name="MessageRecord_you_updated_group">Du uppdaterade gruppen.</string>
   <string name="MessageRecord_the_group_was_updated">Gruppen uppdaterades.</string>
   <string name="MessageRecord_you_called_date">Du ringde · %1$s</string>
+  <string name="MessageRecord_missed_audio_call_date">Missat ljudsamtal · %1$s</string>
+  <string name="MessageRecord_missed_video_call_date">Missat videosamtal · %1$s</string>
   <string name="MessageRecord_s_updated_group">%s uppdaterade gruppen.</string>
   <string name="MessageRecord_s_called_you_date">%1$s ringde dig · %2$s</string>
   <string name="MessageRecord_called_s">Ringde %s</string>
@@ -816,6 +833,11 @@
   <string name="MessageRecord_you_set_disappearing_message_time_to_s">Du ställde in tidsgränsen för att försvinnande meddelanden till %1$s.</string>
   <string name="MessageRecord_s_set_disappearing_message_time_to_s">%1$s ställde in tidsgränsen för försvinnande meddelanden till %2$s. </string>
   <string name="MessageRecord_disappearing_message_time_set_to_s">Den försvinnande meddelandetidtagaren har ställts in till %1$s.</string>
+  <string name="MessageRecord_this_group_was_updated_to_a_new_group">Denna grupp uppdaterades till en Ny grupp.</string>
+  <plurals name="MessageRecord_members_couldnt_be_added_to_the_new_group_and_have_been_invited">
+    <item quantity="one">%1$s medlem kunde inte läggas till i den Nya gruppen och har blivit inbjuden att gå med.</item>
+    <item quantity="other">%1$s medlemmar kunde inte läggas till i den Nya gruppen och har bjudits in att gå med.</item>
+  </plurals>
   <!--Profile change updates-->
   <string name="MessageRecord_changed_their_profile_name_to">%1$s ändrade sitt profilnamn till %2$s.</string>
   <string name="MessageRecord_changed_their_profile_name_from_to">%1$s ändrade sitt profilnamn från %2$s till %3$s.</string>
@@ -1323,6 +1345,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="MediaPreviewActivity_media_delete_confirmation_message">Detta kommer att ta bort detta meddelande permanent.</string>
   <string name="MediaPreviewActivity_s_to_s">%1$s till %2$s</string>
   <string name="MediaPreviewActivity_media_no_longer_available">Media är inte längre tillgängligt.</string>
+  <string name="MediaPreviewActivity_cant_find_an_app_able_to_share_this_media">Det går inte att hitta en app som kan dela detta medium.</string>
   <!--MessageNotifier-->
   <string name="MessageNotifier_d_new_messages_in_d_conversations">%1$d nya meddelanden i %2$d konversationer</string>
   <string name="MessageNotifier_most_recent_from_s">Senaste från %1$s</string>
@@ -2342,11 +2365,31 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--ReviewCardDialogFragment-->
+  <string name="ReviewCardDialogFragment__review_members">Granska medlemmar</string>
+  <string name="ReviewCardDialogFragment__review_request">Granskningsförfrågan</string>
+  <string name="ReviewCardDialogFragment__d_group_members_have_the_same_name">%1$d gruppmedlemmar har samma namn, granska medlemmarna nedan och välj att vidta åtgärder.</string>
+  <string name="ReviewCardDialogFragment__if_youre_not_sure">Om du inte är säker på vem förfrågan kommer från, granska kontakterna nedan och vidta åtgärder.</string>
+  <string name="ReviewCardDialogFragment__no_other_groups_in_common">Inga andra grupper gemensamt.</string>
+  <string name="ReviewCardDialogFragment__no_groups_in_common">Inga grupper gemensamt.</string>
+  <plurals name="ReviewCardDialogFragment__d_other_groups_in_common">
+    <item quantity="one">%d grupp gemensamt</item>
+    <item quantity="other">%d grupper gemensamt</item>
+  </plurals>
+  <plurals name="ReviewCardDialogFragment__d_groups_in_common">
+    <item quantity="one">%d grupp gemensamt</item>
+    <item quantity="other">%d grupper gemensamt</item>
+  </plurals>
+  <string name="ReviewCardDialogFragment__remove_s_from_group">Ta bort %1$s från grupp?</string>
   <string name="ReviewCardDialogFragment__remove">Ta bort</string>
+  <string name="ReviewCardDialogFragment__failed_to_remove_group_member">Det gick inte att ta bort gruppmedlemmen.</string>
   <!--ReviewCard-->
   <string name="ReviewCard__member">Medlem</string>
+  <string name="ReviewCard__request">Förfrågan</string>
+  <string name="ReviewCard__your_contact">Din kontakt</string>
   <string name="ReviewCard__remove_from_group">Ta bort från grupp</string>
+  <string name="ReviewCard__update_contact">Uppdatera kontakt</string>
   <string name="ReviewCard__block">Blockera</string>
   <string name="ReviewCard__delete">Ta bort</string>
+  <string name="ReviewCard__recently_changed">Nyligen ändrat sitt profilnamn från %1$s till %2$s</string>
   <!--EOF-->
 </resources>
