--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -26,7 +26,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">這將會永久性地解鎖 Signal 與訊息通知。</string>
   <string name="ApplicationPreferencesActivity_disable">停用</string>
   <string name="ApplicationPreferencesActivity_unregistering">取消註冊</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">正在從Signal訊息和通話中註銷…    </string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">正在取消註冊 Signal 訊息和通話…    </string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">停用 Signal 訊息與通話？</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">這將會從伺服器上登出您的 Signal 並停用。 未來如果還想使用該功能，則需要再次註冊。</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">與伺服器的連線發生錯誤！</string>
@@ -182,8 +182,8 @@
   <string name="ConversationItem_read_more">讀取更多</string>
   <string name="ConversationItem_download_more">下載更多</string>
   <string name="ConversationItem_pending">等待中</string>
-  <string name="ConversationItem_this_message_was_deleted">這個訊息已經被刪除。</string>
-  <string name="ConversationItem_you_deleted_this_message">你刪除了此訊息。</string>
+  <string name="ConversationItem_this_message_was_deleted">此訊息已被刪除。</string>
+  <string name="ConversationItem_you_deleted_this_message">你已刪除此訊息。</string>
   <!--ConversationActivity-->
   <string name="ConversationActivity_reset_secure_session_question">重設安全對話？</string>
   <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">該選項將會有助於解決您在對話中遇到的加密問題。您的訊息將被保留。</string>
@@ -240,9 +240,9 @@
   <string name="ConversationActivity_you_will_leave_this_group_and_it_will_be_deleted_from_all_of_your_devices">你將離開此群組，及它將從你所有的裝置上被刪除。</string>
   <string name="ConversationActivity_delete">刪除</string>
   <string name="ConversationActivity_delete_and_leave">刪除並離開</string>
-  <string name="ConversationActivity__to_call_s_signal_needs_access_to_your_microphone">要撥電話給%1$s，Signal 須要你連結你的麥克風</string>
-  <string name="ConversationActivity__to_call_s_signal_needs_access_to_your_microphone_and_camera">要撥電話給%1$s，Signal 須要連結你的麥克風與相機。</string>
-  <string name="ConversationActivity__more_options_now_in_group_settings">在\"群組設定\"中有更多的選項</string>
+  <string name="ConversationActivity__to_call_s_signal_needs_access_to_your_microphone">如要與 %1$s 通話，Signal 需要存取你的麥克風</string>
+  <string name="ConversationActivity__to_call_s_signal_needs_access_to_your_microphone_and_camera">如要與 %1$s 通話，Signal 需要存取你的麥克風與相機。</string>
+  <string name="ConversationActivity__more_options_now_in_group_settings">「群組設定」中現有更多選項</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="other">%d 則未讀訊息</item>
@@ -252,7 +252,7 @@
     <item quantity="other">刪除已選訊息？</item>
   </plurals>
   <plurals name="ConversationFragment_this_will_permanently_delete_all_n_selected_messages">
-    <item quantity="other">這將會永久刪除所有 %1$d 已選訊息</item>
+    <item quantity="other">這將會永久刪除所有 %1$d 則已選訊息。</item>
   </plurals>
   <string name="ConversationFragment_save_to_sd_card">儲存？</string>
   <plurals name="ConversationFragment_saving_n_media_to_storage_warning">
@@ -284,7 +284,7 @@
   <string name="ConversationFragment_you_can_swipe_to_the_left_reply">你可以在任何訊息上向左滑動以快速回覆</string>
   <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">傳送出去的一次性多媒體檔案被傳送出去之後會自動消除</string>
   <string name="ConversationFragment_you_already_viewed_this_message">你已經看過這個訊息</string>
-  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">你可以在此對話中為自己新增註釋。\ n如果你的帳號有任何連結的裝置，則新的註釋將被同步。</string>
+  <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">你可以在此對話中為自己新增筆記。\n如果你的帳號有任何連結的裝置，則新的筆記將會同步處理。</string>
   <string name="ConversationFragment__d_group_members_have_the_same_name">%1$d個群組成員有相同的名稱。</string>
   <string name="ConversationFragment__tap_to_review">點按以查看</string>
   <string name="ConversationFragment__review_requests_carefully">仔細審核請求</string>
@@ -297,7 +297,7 @@
     <item quantity="other">刪除已選對話？</item>
   </plurals>
   <plurals name="ConversationListFragment_this_will_permanently_delete_all_n_selected_conversations">
-    <item quantity="other">這將會永久性地刪除所有 %1$d 已選對話。</item>
+    <item quantity="other">這將會永久刪除所有 %1$d 個已選對話。</item>
   </plurals>
   <string name="ConversationListFragment_deleting">正在刪除</string>
   <string name="ConversationListFragment_deleting_selected_conversations">刪除所選擇的對話中…        </string>
@@ -306,7 +306,7 @@
   </plurals>
   <string name="ConversationListFragment_undo">復原</string>
   <plurals name="ConversationListFragment_moved_conversations_to_inbox">
-    <item quantity="other">已經移動 %d 個對話到收件箱</item>
+    <item quantity="other">已移動 %d 個對話到收件匣</item>
   </plurals>
   <!--ConversationListItem-->
   <string name="ConversationListItem_key_exchange_message">金鑰交換訊息</string>
@@ -391,7 +391,7 @@
   <string name="DozeReminder_optimize_for_missing_play_services">為缺少的 Play 服務優化</string>
   <string name="DozeReminder_this_device_does_not_support_play_services_tap_to_disable_system_battery">這個裝置不支援 Play 服務。輕觸關閉，因為系統電池效能最佳化會防止 Signal 在閒置時取得訊息。</string>
   <!--ExpiredBuildReminder-->
-  <string name="ExpiredBuildReminder_this_version_of_signal_has_expired">此版本的Signal已過期。 立即更新以傳送和接收訊息。</string>
+  <string name="ExpiredBuildReminder_this_version_of_signal_has_expired">此版本的 Signal 已過期。立即更新以傳送和接收訊息。</string>
   <string name="ExpiredBuildReminder_update_now">立即更新</string>
   <!--PendingGroupJoinRequestsReminder-->
   <plurals name="PendingGroupJoinRequestsReminder_d_pending_member_requests">
@@ -412,9 +412,9 @@
   <string name="GiphyFragmentPagerAdapter_gifs">動態圖檔</string>
   <string name="GiphyFragmentPagerAdapter_stickers">貼圖</string>
   <!--AddToGroupActivity-->
-  <string name="AddToGroupActivity_add_member">新增成員嗎?</string>
-  <string name="AddToGroupActivity_add_s_to_s">新增\"%1$s\"到\"%2$s\"嗎？</string>
-  <string name="AddToGroupActivity_s_added_to_s">\"%1$s\"被加入\"%2$s\"。</string>
+  <string name="AddToGroupActivity_add_member">新增成員嗎？</string>
+  <string name="AddToGroupActivity_add_s_to_s">新增「%1$s」到「%2$s」嗎？</string>
+  <string name="AddToGroupActivity_s_added_to_s">「%1$s」已加入「%2$s」。</string>
   <string name="AddToGroupActivity_add_to_group">新增到群組</string>
   <string name="AddToGroupActivity_add_to_groups">新增到群組</string>
   <string name="AddToGroupActivity_this_person_cant_be_added_to_legacy_groups">無法將此人新增到舊群組中。</string>
@@ -422,7 +422,7 @@
   <!--ChooseNewAdminActivity-->
   <string name="ChooseNewAdminActivity_choose_new_admin">選擇新的管理員</string>
   <string name="ChooseNewAdminActivity_done">完成</string>
-  <string name="ChooseNewAdminActivity_you_left">你已離開了\"%1$s。\"</string>
+  <string name="ChooseNewAdminActivity_you_left">你離開了「%1$s」。</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">分享你的個人資訊中的名字及頭像照片給這個群組？</string>
   <string name="GroupShareProfileView_do_you_want_to_make_your_profile_name_and_photo_visible_to_all_current_and_future_members_of_this_group">你想讓這個群組中，目前及未來的成員，都能夠看見你個人資訊中的名字及頭像照片？</string>
@@ -438,7 +438,7 @@
   <plurals name="GroupManagement_invitation_sent">
     <item quantity="other">%d 個邀請已送出</item>
   </plurals>
-  <string name="GroupManagement_invite_single_user">\"%1$s\"不能由你自動新增到此群組。\n\n他們已被邀請加入，並且在他們接受之前不會看到任何群組訊息。</string>
+  <string name="GroupManagement_invite_single_user">「%1$s」不能由你自動新增到此群組中。\n\n他們已獲邀請加入，並且在他們接受之前不會看到任何群組訊息。</string>
   <string name="GroupManagement_learn_more">了解更多</string>
   <string name="GroupManagement_invite_multiple_users">你無法將這些使用者自動新增到此群組。\n\n他們已被邀請加入群組，並且在他們接受之前不會看到任何群組訊息。</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
@@ -491,8 +491,8 @@
   <string name="RequestingMembersFragment_pending_member_requests">待處理的成員要求</string>
   <string name="RequestingMembersFragment_no_member_requests_to_show">沒有成員要求顯示。</string>
   <string name="RequestingMembersFragment_explanation">此清單中的人員正在嘗試透過群組連結加入此群組。</string>
-  <string name="RequestingMembersFragment_added_s">已新增\"%1$s\"</string>
-  <string name="RequestingMembersFragment_denied_s">已拒絕 \"%1$s\"</string>
+  <string name="RequestingMembersFragment_added_s">已新增「%1$s」</string>
+  <string name="RequestingMembersFragment_denied_s">已拒絕「%1$s」</string>
   <!--AddMembersActivity-->
   <string name="AddMembersActivity__done">完成</string>
   <string name="AddMembersActivity__this_person_cant_be_added_to_legacy_groups">無法將此人新增到舊群組中。</string>
@@ -505,14 +505,14 @@
   <string name="AddGroupDetailsFragment__create_group">建立群組</string>
   <string name="AddGroupDetailsFragment__create">建立</string>
   <string name="AddGroupDetailsFragment__members">成員</string>
-  <string name="AddGroupDetailsFragment__group_name_required">群組名稱(必要的)</string>
+  <string name="AddGroupDetailsFragment__group_name_required">群組名稱 (必填)</string>
   <string name="AddGroupDetailsFragment__this_field_is_required">此欄位是必須的</string>
   <string name="AddGroupDetailsFragment__groups_require_at_least_two_members">群組必須要有至少兩個成員。</string>
   <string name="AddGroupDetailsFragment__group_creation_failed">群組建立失敗。</string>
   <string name="AddGroupDetailsFragment__try_again_later">請稍後再試一次。</string>
-  <string name="AddGroupDetailsFragment__youve_selected_a_contact_that_doesnt">你選擇的聯絡人不支援Signal 群組，因此該群組為MMS。</string>
+  <string name="AddGroupDetailsFragment__youve_selected_a_contact_that_doesnt">你選擇的聯絡人不支援 Signal 群組，因此該群組為多媒體訊息。</string>
   <string name="AddGroupDetailsFragment__remove">移除</string>
-  <string name="AddGroupDetailsFragment__sms_contact">SMS 聯絡人</string>
+  <string name="AddGroupDetailsFragment__sms_contact">簡訊聯絡人</string>
   <string name="AddGroupDetailsFragment__remove_s_from_this_group">從此群組移除%1$s嗎？</string>
   <plurals name="AddGroupDetailsFragment__d_members_do_not_support_new_groups">
     <item quantity="other">%d個成員不支援新群組，因此該群組將成為舊群組。</item>
@@ -542,12 +542,12 @@
   <string name="ManageGroupActivity_on">開</string>
   <string name="ManageGroupActivity_view_all_members">檢視所有成員</string>
   <string name="ManageGroupActivity_see_all">查看全部</string>
-  <string name="ManageGroupActivity_none">靜音</string>
+  <string name="ManageGroupActivity_none">無</string>
   <plurals name="ManageGroupActivity_invited">
-    <item quantity="other">%d被邀請了</item>
+    <item quantity="other">%d 人已獲邀請</item>
   </plurals>
   <plurals name="ManageGroupActivity_added">
-    <item quantity="other">%d個成員被新增。</item>
+    <item quantity="other">%d 個成員已新增。</item>
   </plurals>
   <string name="ManageGroupActivity_only_admins_can_enable_or_disable_the_sharable_group_link">只有管理員可以啟用或停用可共享的群組連結。</string>
   <string name="ManageGroupActivity_only_admins_can_enable_or_disable_the_option_to_approve_new_members">只有管理員可以啟用或停用批准新成員的選項。</string>
@@ -561,7 +561,7 @@
   <string name="ManageGroupActivity_edit_name_and_picture">編輯名稱及圖片</string>
   <string name="ManageGroupActivity_legacy_group">舊版群組</string>
   <string name="ManageGroupActivity_legacy_group_learn_more">這是一個舊版群組。群組管理員之類的功能僅適用於新群組。</string>
-  <string name="ManageGroupActivity_this_is_an_insecure_mms_group">這是一個不安全的MMS群組。 要私下聊天並連結群組名稱等功能，請邀請你的聯絡人加入Signal。</string>
+  <string name="ManageGroupActivity_this_is_an_insecure_mms_group">這是一個不安全的多媒體訊息群組。要私密聊天並存取群組名稱等功能，請邀請你的聯絡人加入 Signal。</string>
   <string name="ManageGroupActivity_invite_now">立即邀請</string>
   <!--GroupMentionSettingDialog-->
   <string name="GroupMentionSettingDialog_notify_me_for_mentions">通知我提及。</string>
@@ -596,7 +596,7 @@
   <string name="ManageRecipientActivity_insecure_voice_call_description">不安全的語音電話</string>
   <string name="ManageRecipientActivity_video_call_description">視訊電話</string>
   <plurals name="GroupMemberList_invited">
-    <item quantity="other">%1$s邀請了%2$d個人們</item>
+    <item quantity="other">%1$s 邀請了 %2$d 人</item>
   </plurals>
   <!--CustomNotificationsDialogFragment-->
   <string name="CustomNotificationsDialogFragment__custom_notifications">自訂通知</string>
@@ -709,7 +709,7 @@
     <item quantity="other">刪除選擇的項目嗎？</item>
   </plurals>
   <plurals name="MediaOverviewActivity_Media_delete_confirm_message">
-    <item quantity="other">這將永久刪除所有%1$d所選擇的檔案。與這些項目相關的任何訊息文字也將被刪除。</item>
+    <item quantity="other">這將永久刪除所有 %1$d 個所選檔案。與這些項目相關的任何訊息文字也將被刪除。</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">正在刪除</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">刪除訊息中…    </string>
@@ -754,8 +754,8 @@
   <string name="NotificationBarManager__cancel_call">取消通話</string>
   <!--NotificationMmsMessageRecord-->
   <string name="NotificationMmsMessageRecord_multimedia_message">多媒體訊息</string>
-  <string name="NotificationMmsMessageRecord_downloading_mms_message">正在下載MMS訊息</string>
-  <string name="NotificationMmsMessageRecord_error_downloading_mms_message">下載MMS訊息時發生錯誤，點擊重試</string>
+  <string name="NotificationMmsMessageRecord_downloading_mms_message">正在下載多媒體訊息</string>
+  <string name="NotificationMmsMessageRecord_error_downloading_mms_message">下載多媒體訊息時發生錯誤，輕觸以重試</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">傳送給 %s</string>
   <string name="MediaPickerActivity__menu_open_camera">開啟相機</string>
@@ -1274,8 +1274,8 @@
   <string name="MessageDisplayHelper_bad_encrypted_message">損毀的加密訊息</string>
   <string name="MessageDisplayHelper_message_encrypted_for_non_existing_session">此加密訊息的對話已不存在</string>
   <!--MmsMessageRecord-->
-  <string name="MmsMessageRecord_bad_encrypted_mms_message">損毀的加密MMS訊息</string>
-  <string name="MmsMessageRecord_mms_message_encrypted_for_non_existing_session">此加密MMS訊息的對話已不存在</string>
+  <string name="MmsMessageRecord_bad_encrypted_mms_message">損毀的加密多媒體訊息</string>
+  <string name="MmsMessageRecord_mms_message_encrypted_for_non_existing_session">此加密多媒體訊息的對話已不存在</string>
   <!--MuteDialog-->
   <string name="MuteDialog_mute_notifications">靜音通知</string>
   <!--ApplicationMigrationService-->
@@ -1605,7 +1605,7 @@
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="other">%1$s 加入了群組。</item>
   </plurals>
-  <string name="GroupUtil_group_name_is_now">群組現在名為 \'%1$s\'。</string>
+  <string name="GroupUtil_group_name_is_now">群組現在名為「%1$s」。</string>
   <!--profile_group_share_view-->
   <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">要讓這個群組能看見你個人資訊的名字與照片？</string>
   <!--prompt_passphrase_activity-->
@@ -1683,7 +1683,7 @@
   <string name="MessageRequestsMegaphone__add_profile_name">新增個人資料名稱</string>
   <string name="MessageRequestsMegaphone__new_message_requests">新增:訊息要求</string>
   <string name="MessageRequestsMegaphone__add_name">新增名字</string>
-  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">你現在可以選擇是否接受新的對話。 你會看到“接受,” “刪除,” 或 “封鎖,” 選項。</string>
+  <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">你現在可以選擇是否接受新的對話。 你會看到「接受」、「刪除」或「封鎖」的選項。</string>
   <!--HelpFragment-->
   <string name="HelpFragment__help">幫助</string>
   <string name="HelpFragment__have_you_read_our_faq_yet">你閱讀過我們的問與答嗎?</string>
@@ -1744,7 +1744,7 @@
     <item quantity="other">%d 小時前</item>
   </plurals>
   <!--preferences.xml-->
-  <string name="preferences__sms_mms">簡訊與多媒體簡訊</string>
+  <string name="preferences__sms_mms">簡訊與多媒體訊息</string>
   <string name="preferences__pref_all_sms_title">接收所有手機簡訊</string>
   <string name="preferences__pref_all_mms_title">接收所有多媒體訊息</string>
   <string name="preferences__use_signal_for_viewing_and_storing_all_incoming_text_messages">使用 Signal 接收所有簡訊</string>
@@ -1856,7 +1856,7 @@
   <string name="preferences_storage__one_year">1年</string>
   <string name="preferences_storage__six_months">6個月</string>
   <string name="preferences_storage__thirty_days">30天</string>
-  <string name="preferences_storage__none">靜音</string>
+  <string name="preferences_storage__none">無</string>
   <string name="preferences_storage__s_messages">%1$s則訊息</string>
   <string name="preferences_storage__custom">自訂</string>
   <string name="preferences_advanced__use_system_emoji">使用系統表情符號</string>
@@ -1874,9 +1874,9 @@
   <string name="preferences_notifications__calls">通話</string>
   <string name="preferences_notifications__ringtone">鈴聲</string>
   <string name="preferences_chats__show_invitation_prompts">顯示邀請提示</string>
-  <string name="preferences_chats__display_invitation_prompts_for_contacts_without_signal">不用 Signal 來顯示給聯絡人的邀請提示</string>
+  <string name="preferences_chats__display_invitation_prompts_for_contacts_without_signal">對非使用 Signal 的聯絡人顯示邀請提示</string>
   <string name="preferences_chats__message_text_size">訊息字體大小</string>
-  <string name="preferences_events__contact_joined_signal">聯絡人已加入 Signal 通知</string>
+  <string name="preferences_events__contact_joined_signal">聯絡人新加入 Signal</string>
   <string name="preferences_notifications__priority">優先順序</string>
   <string name="preferences_communication__category_sealed_sender">密封發件人</string>
   <string name="preferences_communication__sealed_sender_display_indicators">顯示指標</string>
@@ -1937,12 +1937,12 @@
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">聯絡人相片</string>
   <string name="conversation_list_item_view__archived">存檔</string>
-  <string name="conversation_list_item_inbox_zero__inbox_zeeerrro">收件箱是空的</string>
+  <string name="conversation_list_item_inbox_zero__inbox_zeeerrro">收件匣空空如也</string>
   <string name="conversation_list_item_inbox_zero__zip_zilch_zero_nada_nyou_re_all_caught_up">沒有未讀訊息。\n你已經都讀過囉！</string>
   <!--conversation_list_fragment-->
   <string name="conversation_list_fragment__fab_content_description">新對話</string>
   <string name="conversation_list_fragment__open_camera_description">開啟相機</string>
-  <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">何不給你的收件夾寫些東西呢？從發個訊息給好友開始吧！</string>
+  <string name="conversation_list_fragment__give_your_inbox_something_to_write_home_about_get_started_by_messaging_a_friend">何不為你的收件匣添上一筆？就發個訊息給好友開始吧！</string>
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">重設安全對話</string>
   <!--conversation_muted-->
@@ -2184,7 +2184,7 @@
   <string name="ProgressPreference_d_messages_so_far">目前有 %d 則訊息</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">請輸入傳送給 %s 的驗證碼</string>
   <string name="RegistrationActivity_wrong_number">驗證碼錯誤</string>
-  <string name="RegistrationActivity_call_me_instead_available_in">改用電話打給我 \n (只提供於 %1$02d : %2$02d )</string>
+  <string name="RegistrationActivity_call_me_instead_available_in">改為致電給我 \n (請稍候 %1$02d:%2$02d)</string>
   <string name="RegistrationActivity_contact_signal_support">聯絡 Signal 支援</string>
   <string name="RegistrationActivity_code_support_subject">Signal 註冊 - Android驗證碼</string>
   <string name="BackupUtil_never">永不</string>
